--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -1,3 +1,6 @@
+#################################
+# Toolbar
+#################################
 Work_Bench=Work Bench
 workbench_hint=Create and edit Pre-Catalog Work Benches
 Data_Entry=Data Entry
@@ -10,3 +13,53 @@ Interactions=Interactions
 interactions_hint=Create, Edit Loans, Gifts, and Exchanges 
 Search=Search
 search_hint=Search for any data in the collection
+Statistics=Statistics
+stats_hint=Display statistics for the collection
+Saved_Searches=Saved Searches
+
+#################################
+# Generic Terms
+#################################
+Create=Create
+
+#################################
+# Generic Icons
+#################################
+Bar_Chart=Bar Chart
+Pie_Chart=Pie Chart
+
+#################################
+# Search
+#################################
+New=New
+Advanced=Advanced
+Specimen=Specimen
+Taxonomic=Taxonomic
+Geographic=Geographic
+Actions=Actions
+
+#################################
+# Reports
+#################################
+Create_New_Report=Create New Report
+
+#################################
+# Data Entry
+#################################
+Series_Processing=Series Processing
+
+#################################
+# Statistics
+#################################
+Top_5_Species=Top Five Species
+Items_Cat_5_Years=Items Cataloged Last 5 Years
+
+#################################
+# Interactions
+#################################
+New_Loan=New Loans
+New_Gifts=New Gifts
+New_Exchange=New Exchange
+All_Overdue_Loans_Report=All Overdue Loans - Report
+All_Open_Loans_Report=All Open Loans - Reports
+All_Loans_Report=All Loans - Report
