--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -17,6 +17,8 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 
+Execute=Execute
+
 #################################
 # Generic Terms
 #################################
