updated comments and added return key to SQL query and fixed the exception from closing the connection too soon.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -17,6 +17,8 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 
+Execute=Execute
+
 #################################
 # Generic Terms
 #################################
