almost entirely comments, a little reworking

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -17,12 +17,14 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 
-Execute=Execute
+ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 
 #################################
 # Generic Terms
 #################################
 Create=Create
+Execute=Execute
+Error=Error
 
 #################################
 # Generic Icons
