added initial label example

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -33,6 +33,16 @@ Bar_Chart=Bar Chart
 Pie_Chart=Pie Chart
 
 #################################
+# Jasper Report Errors
+#################################
+JasperReportCreateError=There was a problem creating the Report or Label.
+JasperReportFillError=There was an error filling the report.
+JasperReportCreatingViewer=There was an error creating the viewer for the report.
+JasperReportCompileError=There was an error compiling the report.
+JasperReportCompiling=Compiling...
+JasperReportFilling=Filling...
+
+#################################
 # Search
 #################################
 New=New
