Updating Tasks so they now have an unlocalozed name and a localized title, the unlocalized name is for looking up images. Moved the loading of all the images (icons) to the IconManager and an icon.xml file.
Added some stats

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -17,6 +17,11 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 
+Record_Set=Record Sets
+
+#################################
+# Generic Errors
+#################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 
 #################################
