--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -17,6 +17,11 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 
+Record_Set=Record Sets
+
+#################################
+# Generic Errors
+#################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 
 #################################
