--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -46,6 +46,7 @@ JasperReportCreatingViewer=There was an error creating the viewer for the report
 JasperReportCompileError=There was an error compiling the report.
 JasperReportCompiling=Compiling...
 JasperReportFilling=Filling...
+JasperReportReadingCachedReport=There was a problem reading the cached (compiled) report.
 
 #################################
 # Search
