Added the start of the Save Record Set dialog

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -19,6 +19,11 @@ Saved_Searches=Saved Searches
 
 Record_Set=Record Sets
 
+SelectAll=Select All
+DeselectAll=Deselect All
+Cancel=Cancel
+OK=OK
+
 #################################
 # Generic Errors
 #################################
@@ -47,6 +52,14 @@ JasperReportCompileError=There was an error compiling the report.
 JasperReportCompiling=Compiling...
 JasperReportFilling=Filling...
 JasperReportReadingCachedReport=There was a problem reading the cached (compiled) report.
+
+#################################
+# Save RecordSet Dialog
+#################################
+RecordSet_Name=RecordSet Name
+SaveToRecordSet=Save To RecordSet
+AddAllSelected=Add All Selected
+AddAll=Add All
 
 #################################
 # Search
