Updates to SaveRecordSets

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -58,7 +58,7 @@ JasperReportReadingCachedReport=There was a problem reading the cached (compiled
 #################################
 RecordSet_Name=RecordSet Name
 SaveToRecordSet=Save To RecordSet
-AddAllSelected=Add All Selected
+AddAllSelected=Add Selected
 AddAll=Add All
 
 #################################
