added express search with UI

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -23,6 +23,8 @@ SelectAll=Select All
 DeselectAll=Deselect All
 Cancel=Cancel
 OK=OK
+Close=Close
+Advanced=Advanced
 
 #################################
 # Generic Errors
@@ -60,6 +62,20 @@ RecordSet_Name=RecordSet Name
 SaveToRecordSet=Save To RecordSet
 AddAllSelected=Add Selected
 AddAll=Add All
+
+#################################
+# Express Search
+#################################
+ESConfig=Express Search Config
+ESConfig_Mn=x
+IndexerPane=Express Search Config
+Express_Search=Express Search
+Indexing_Descr=Indexing Collection Information
+doneIndexing=Indexing has completed.
+indexingWasCancelled=Indexing was cancelled and removed.
+CancelIndexing=Cancel Indexing
+ShowTopEntries=Show Top %s
+MoreEntries=%d more...
 
 #################################
 # Search
