updates and fixes

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -56,6 +56,12 @@ JasperReportFilling=Filling...
 JasperReportReadingCachedReport=There was a problem reading the cached (compiled) report.
 
 #################################
+# Pie Chart and Bar Chart Panes
+#################################
+BuildingPieChart=Building Pie Chart...
+BuildingBarChart=Building Bar Chart...
+
+#################################
 # Save RecordSet Dialog
 #################################
 RecordSet_Name=RecordSet Name
@@ -76,6 +82,7 @@ indexingWasCancelled=Indexing was cancelled and removed.
 CancelIndexing=Cancel Indexing
 ShowTopEntries=Show Top %s
 MoreEntries=%d more...
+ESResults=Express Search Results
 
 #################################
 # Search
@@ -86,6 +93,7 @@ Specimen=Specimen
 Taxonomic=Taxonomic
 Geographic=Geographic
 Actions=Actions
+QueryStarting=Searching for Data...
 
 #################################
 # Reports
