--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -1,6 +1,7 @@
 #################################
-# Toolbar
+# Toolbar /  Tasks
 #################################
+Startup=Welcome
 Work_Bench=Work Bench
 workbench_hint=Create and edit Pre-Catalog Work Benches
 Data_Entry=Data Entry
@@ -25,6 +26,7 @@ Cancel=Cancel
 OK=OK
 Close=Close
 Advanced=Advanced
+NoneAvail=None Available
 
 #################################
 # Generic Errors
@@ -83,6 +85,12 @@ CancelIndexing=Cancel Indexing
 ShowTopEntries=Show Top %s
 MoreEntries=%d more...
 ESResults=Express Search Results
+UpdatingES=Updating Express Search Information
+ESIndexerCaption=Express Search - Up To Date Tables
+Configure=Configure
+Build=Build Express Search
+ESIndexerExplain=(You should rebuild the Express Search Information)
+ESNoRebuild=(The Express Search does not need to be rebuilt.)
 
 #################################
 # Search
