--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -29,6 +29,18 @@ Advanced=Advanced
 NoneAvail=None Available
 
 #################################
+# Menus
+#################################
+FileMenu=File
+FileMneu=F
+EditMenu=Edit
+EditMneu=E
+AdvMenu=Advanced
+AdvMneu=A
+TabsMenu=Tabs
+TabsMneu=T
+
+#################################
 # Generic Errors
 #################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
@@ -91,6 +103,8 @@ Configure=Configure
 Build=Build Express Search
 ESIndexerExplain=(You should rebuild the Express Search Information)
 ESNoRebuild=(The Express Search does not need to be rebuilt.)
+ESBadQuery=Can't figure out your search terms, please try something else.
+ESBadQueryTitle=Incorrect Search Terms
 
 #################################
 # Search
