--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -51,6 +51,8 @@ ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 Create=Create
 Execute=Execute
 Error=Error
+Rename=Rename
+Delete=Delete
 
 #################################
 # Generic Icons
@@ -142,3 +144,17 @@ New_Exchange=New Exchange
 All_Overdue_Loans_Report=All Overdue Loans - Report
 All_Open_Loans_Report=All Open Loans - Reports
 All_Loans_Report=All Loans - Report
+
+#################################
+# Record Sets
+#################################
+AskForRSName=Enter a Record Set Name:
+ChooseRecordSet=Choose a RecordSet
+
+#################################
+# Labels
+#################################
+AskCatalogNum=Please Enter a Catalog Item
+ChooseLabel=Choose a Label
+LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
+LotsOfLabelsTitle=Label Creation Request
