--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -107,6 +107,12 @@ ESIndexerExplain=(You should rebuild the Express Search Information)
 ESNoRebuild=(The Express Search does not need to be rebuilt.)
 ESBadQuery=Can't figure out your search terms, please try something else.
 ESBadQueryTitle=Incorrect Search Terms
+CreateLabelTT=Create Labels from selected records
+CreateRecordSetTT=Create RecordSet from selected records
+EditRecordSetTT=Edit the selected records
+ESCloseTable=Close
+ExpandTBL=Expand
+CollapseTBL=Collapse
 
 #################################
 # Search
