Some final updates before milestone

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -48,11 +48,11 @@ ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 #################################
 # Generic Terms
 #################################
-Create=Create
 Execute=Execute
 Error=Error
 Rename=Rename
 Delete=Delete
+EmptyTrash=Empty Trash
 
 #################################
 # Generic Icons
@@ -134,6 +134,7 @@ Create_New_Report=Create New Report
 # Data Entry
 #################################
 Series_Processing=Series Processing
+CreateAndUpdate=Create/Update
 
 #################################
 # Statistics
