Major clean (got rid of a lot of the warnings), added searching of forms and labels.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -54,6 +54,11 @@ Rename=Rename
 Delete=Delete
 EmptyTrash=Empty Trash
 
+# Trash Iiems
+Open=Open
+Restore=Restore
+DeletedItems=Deleted Items
+
 #################################
 # Generic Icons
 #################################
