--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -54,6 +54,11 @@ Rename=Rename
 Delete=Delete
 EmptyTrash=Empty Trash
 
+# Trash Iiems
+Open=Open
+Restore=Restore
+DeletedItems=Deleted Items
+
 #################################
 # Generic Icons
 #################################
