Added Preference work

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -41,6 +41,16 @@ TabsMenu=Tabs
 TabsMneu=T
 
 #################################
+# Prefs
+#################################
+preferences=Preferences
+showall=Show All
+ui=User Interface
+email=EMail
+formatting=Formatting
+settings=Settings
+
+#################################
 # Generic Errors
 #################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
