--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -29,6 +29,33 @@ Advanced=Advanced
 NoneAvail=None Available
 
 #################################
+# Generic Errors
+#################################
+ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
+
+#################################
+# Generic Terms
+#################################
+Execute=Execute
+Error=Error
+Rename=Rename
+Delete=Delete
+EmptyTrash=Empty Trash
+close=Close
+error=Error
+
+# Trash Iiems
+Open=Open
+Restore=Restore
+DeletedItems=Deleted Items
+
+#################################
+# Generic Icons
+#################################
+Bar_Chart=Bar Chart
+Pie_Chart=Pie Chart
+
+#################################
 # Menus
 #################################
 FileMenu=File
@@ -50,30 +77,38 @@ email=EMail
 formatting=Formatting
 settings=Settings
 
-#################################
-# Generic Errors
-#################################
-ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
+# Email
+emailacctsettings=EMail Account Settings
+imap=IMAP
+pop3=POP3
+accounttype=Account Type
+servername=Server Name
+smtp=SMTP
+username=Username
+password=Password
+accountname=Account Name
+browsedisk=Browse...
+testconnection=Test Connection
+localmailbox=Local Mail Box
+userinfo=User Information
+messagewerefound=%d message were found in your Inbox
+emailsetnotvalid=The email settings in the Preferences are missing some or all of their values.
+cantopeninbox=Cannot open the INBOX
+
+#checker
+checkingemailsettings=Checking EMail Settings
+chksendingmail=Check Sending Mail
+chkmailbox=Check opening mailbox
+chkgetmail=Check Getting Mail
+chkforsentmsg=Check for Specify Test Message
+fndtestmsg=Found Specify Test Message
+nofndtestmsg=Didn't find Specify Test Message, may need more time
 
 #################################
-# Generic Terms
+# Form Errors
 #################################
-Execute=Execute
-Error=Error
-Rename=Rename
-Delete=Delete
-EmptyTrash=Empty Trash
-
-# Trash Iiems
-Open=Open
-Restore=Restore
-DeletedItems=Deleted Items
-
-#################################
-# Generic Icons
-#################################
-Bar_Chart=Bar Chart
-Pie_Chart=Pie Chart
+cantfindviewdef=Can't find the ViewForm Definition
+cantcreateform=Can't create the form from the definition
 
 #################################
 # Jasper Report Errors
@@ -172,6 +207,13 @@ All_Loans_Report=All Loans - Report
 #################################
 AskForRSName=Enter a Record Set Name:
 ChooseRecordSet=Choose a RecordSet
+
+#################################
+# Information Request
+#################################
+InfoRequest=Information Request
+CreateInfoRequestTT=Create Information Request
+inforequest_hint=Information Requests
 
 #################################
 # Labels
