--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -87,7 +87,7 @@ smtp=SMTP
 username=Username
 password=Password
 accountname=Account Name
-browsedisk=Browse...
+browse=Browse...
 testconnection=Test Connection
 localmailbox=Local Mail Box
 userinfo=User Information
@@ -103,6 +103,12 @@ chkgetmail=Check Getting Mail
 chkforsentmsg=Check for Specify Test Message
 fndtestmsg=Found Specify Test Message
 nofndtestmsg=Didn't find Specify Test Message, may need more time
+
+#formatting
+formatting=Formatting
+scrdateformat=Screen Date Format
+valtextcolor=Validation Error Color
+requiredfieldcolor=Required Field Color
 
 #################################
 # Form Errors
