Validation updates, ResultSetController, Form Work, sub-forms, picklist updates (Mostly checking in because it is a weekend and I want to make sure my work gets saved)

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -28,6 +28,9 @@ Close=Close
 Advanced=Advanced
 NoneAvail=None Available
 
+loadingimage=Loading Image
+noimage=No Image
+
 #################################
 # Generic Errors
 #################################
