--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -28,6 +28,9 @@ Close=Close
 Advanced=Advanced
 NoneAvail=None Available
 
+loadingimage=Loading Image
+noimage=No Image
+
 #################################
 # Generic Errors
 #################################
