--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -2,7 +2,7 @@
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
-Work_Bench=Work Bench
+Workbench=Work Bench
 workbench_hint=Create and edit Pre-Catalog Work Benches
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
@@ -231,3 +231,16 @@ AskCatalogNum=Please Enter a Catalog Item
 ChooseLabel=Choose a Label
 LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
 LotsOfLabelsTitle=Label Creation Request
+
+#################################
+# Workbench
+#################################
+File=File
+Templates=Templates
+Workbenches=Workbenches
+New_Workbench=New Work Bench
+New_Template=New Template
+Field_Book_Entry=From Field Book
+Label_Entry=From Labels
+Lawrence_River=Lawrence River
+Smith_Collection=Smith Collection
