--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -17,6 +17,7 @@ search_hint=Search for any data in the collection
 Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
+SystemSetup=Sys Setup
 
 Record_Set=Record Sets
 
@@ -69,6 +70,11 @@ AdvMenu=Advanced
 AdvMneu=A
 TabsMenu=Tabs
 TabsMneu=T
+SystemMenu=System
+SystemMneu=S
+PickListsMenu=Pick Lists
+PickListsMneu=P
+
 
 #################################
 # Prefs
@@ -233,6 +239,12 @@ LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
 LotsOfLabelsTitle=Label Creation Request
 
 #################################
+# SystemSetupTask
+#################################
+picklists=Pick Lists
+newpicklist=New Pick List
+
+#################################
 # Workbench
 #################################
 File=File
@@ -244,3 +256,4 @@ Field_Book_Entry=From Field Book
 Label_Entry=From Labels
 Lawrence_River=Lawrence River
 Smith_Collection=Smith Collection
+
