--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -226,7 +226,7 @@ ChooseRecordSet=Choose a RecordSet
 #################################
 # Information Request
 #################################
-InfoRequest=Information Request
+InfoRequest=Info Request
 CreateInfoRequestTT=Create Information Request
 inforequest_hint=Information Requests
 
