--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -11,7 +11,7 @@ labels_hint=Create and Print Labels
 Reports=Reports
 reports_hint=Create and Print Reports
 Interactions=Interactions
-interactions_hint=Create, Edit Loans, Gifts, and Exchanges 
+interactions_hint=Create, Edit Loans, Gifts, and Exchanges
 Search=Search
 search_hint=Search for any data in the collection
 Statistics=Statistics
@@ -74,6 +74,19 @@ SystemMenu=System
 SystemMneu=S
 PickListsMenu=Pick Lists
 PickListsMneu=P
+CopyMenu=Copy
+CopyAcc=C
+CopyMneu=C
+PasteMenu=Paste
+PasteAcc=V
+PasteMneu=P
+CutMenu=Cut
+CutAccl=X
+CutMneu=t
+ExitMenu=Exit
+ExitAccl=Q
+ExitMneu=x
+
 
 
 #################################
