--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -283,4 +283,7 @@ EnterDataType=Enter the Type of Collection
 EnterCollectionName=Enter Collection Name
 Name=Name
 
-
+#################################
+# Agent Search Pane
+#################################
+AgentSearchTitle=Search For an Agent
