big update: Added comboboxes from queries Added GenericSearch Dialogs Prefereces fix for updating color when pref changes Added new Getters and Setters for forms

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -283,4 +283,7 @@ EnterDataType=Enter the Type of Collection
 EnterCollectionName=Enter Collection Name
 Name=Name
 
-
+#################################
+# Agent Search Pane
+#################################
+AgentSearchTitle=Search For an Agent
