Major update and fixes for form viewing and switching between forms. Also fixed DropDownButton

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -203,6 +203,10 @@ Geographic=Geographic
 Actions=Actions
 QueryStarting=Searching for Data...
 
+# Dialogs
+PermitSearchTitle=Permit Search
+AgentSearchTitle=Agent Search
+
 #################################
 # Reports
 #################################
@@ -219,6 +223,8 @@ CreateAndUpdate=Create/Update
 #################################
 Top_5_Species=Top Five Species
 Items_Cat_5_Years=Items Cataloged Last 5 Years
+PermitsExpiringThisYear=Permits Expiring This Year
+NonCITESPermitsExpiringThisYear=Non-CITES Permits Expiring This Year
 
 #################################
 # Interactions
