--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -191,6 +191,7 @@ EditRecordSetTT=Edit the selected records
 ESCloseTable=Close
 ExpandTBL=Expand
 CollapseTBL=Collapse
+NoExpressSearchResults=No Search Results
 
 #################################
 # Search
