minor changes to furhter get forms working. also work to get searching and express searches working better with dates and and numbers

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -191,6 +191,7 @@ EditRecordSetTT=Edit the selected records
 ESCloseTable=Close
 ExpandTBL=Expand
 CollapseTBL=Collapse
+NoExpressSearchResults=No Search Results
 
 #################################
 # Search
