--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -87,7 +87,11 @@ ExitMenu=Exit
 ExitAccl=Q
 ExitMneu=x
 
-
+#################################
+# Dialogs
+#################################
+AgentTitle=%s Agent
+PermitTitle=%s Permit
 
 #################################
 # Prefs
@@ -208,6 +212,7 @@ QueryStarting=Searching for Data...
 PermitSearchTitle=Permit Search
 AgentSearchTitle=Agent Search
 
+
 #################################
 # Reports
 #################################
@@ -230,6 +235,7 @@ NonCITESPermitsExpiringThisYear=Non-CITES Permits Expiring This Year
 #################################
 # Interactions
 #################################
+Accession=Accession
 New_Loan=New Loans
 New_Gifts=New Gifts
 New_Exchange=New Exchange
