changed workbench strings

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -2,8 +2,8 @@
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
-Workbench=Work Bench
-workbench_hint=Create and edit Pre-Catalog Work Benches
+Workbench=Workbench
+workbench_hint=Create and edit Pre-Catalog Workbenches
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Labels=Labels
@@ -276,7 +276,7 @@ newpicklist=New Pick List
 File=File
 Templates=Templates
 Workbenches=Workbenches
-New_Workbench=New Work Bench
+New_Workbench=New Workbench
 New_Template=New Template
 Field_Book_Entry=From Field Book
 Label_Entry=From Labels
