--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -231,6 +231,7 @@ Top_5_Species=Top Five Species
 Items_Cat_5_Years=Items Cataloged Last 5 Years
 PermitsExpiringThisYear=Permits Expiring This Year
 NonCITESPermitsExpiringThisYear=Non-CITES Permits Expiring This Year
+GetStatsError=Error retrieving stats
 
 #################################
 # Interactions
