Need to check before I leave (Not done with code)

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -45,8 +45,8 @@ Error=Error
 Rename=Rename
 Delete=Delete
 EmptyTrash=Empty Trash
-close=Close
 error=Error
+RetrievingData=Retrieving Data
 
 # Trash Iiems
 Open=Open
