--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -301,3 +301,9 @@ Name=Name
 # Agent Search Pane
 #################################
 AgentSearchTitle=Search For an Agent
+
+#################################
+# Locality Map Pane
+#################################
+CreateLocalityMapTT=Create a Map from the Locality
+
