--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -18,6 +18,7 @@ Statistics=Statistics
 stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 SystemSetup=Sys Setup
+LocalityMapper=Locality Mapper
 
 Record_Set=Record Sets
 
@@ -47,6 +48,7 @@ Delete=Delete
 EmptyTrash=Empty Trash
 error=Error
 RetrievingData=Retrieving Data
+LoadingImage=Loading Image...
 
 # Trash Iiems
 Open=Open
@@ -306,4 +308,5 @@ AgentSearchTitle=Search For an Agent
 # Locality Map Pane
 #################################
 CreateLocalityMapTT=Create a Map from the Locality
+LocalityMapperTitle=Collecting Events from %s to %s
 
