--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -37,6 +37,7 @@ noimage=No Image
 # Generic Errors
 #################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
+NO_RECORD_SETS=There are no matching RecordSets.
 
 #################################
 # Generic Terms
