SPNHC Demo Checkin also includes a number of changes and fixes to a lot of stuff

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -37,6 +37,7 @@ noimage=No Image
 # Generic Errors
 #################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
+NO_RECORD_SETS=There are no matching RecordSets.
 
 #################################
 # Generic Terms
