--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -169,6 +169,7 @@ RecordSet_Name=RecordSet Name
 SaveToRecordSet=Save To RecordSet
 AddAllSelected=Add Selected
 AddAll=Add All
+Save=Save
 
 #################################
 # Express Search
