--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -95,6 +95,8 @@ ExitMneu=x
 #################################
 AgentTitle=%s Agent
 PermitTitle=%s Permit
+LoggingIn=Logging into %s
+NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
 #################################
 # Prefs
