This checkin is mostly for getting the Database login dialog working and it changes the view registry to use files with the views.xml extension instead of form.xml this also contents misc clean ups

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -95,6 +95,8 @@ ExitMneu=x
 #################################
 AgentTitle=%s Agent
 PermitTitle=%s Permit
+LoggingIn=Logging into %s
+NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
 #################################
 # Prefs
