--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -98,6 +98,16 @@ PermitTitle=%s Permit
 LoggingIn=Logging into %s
 NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
+# Login Dialog
+logintitle=Specify Login
+username=Username
+password=Password
+autologin=Automatically Login
+rememberuser=Remember Username
+databases=Databases
+servers=Servers
+login=Login
+
 #################################
 # Prefs
 #################################
@@ -115,8 +125,6 @@ pop3=POP3
 accounttype=Account Type
 servername=Server Name
 smtp=SMTP
-username=Username
-password=Password
 accountname=Account Name
 browse=Browse...
 testconnection=Test Connection
