updates for login dialog

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -107,6 +107,11 @@ rememberuser=Remember Username
 databases=Databases
 servers=Servers
 login=Login
+extratitle=Extra Details
+protocol=Protocol
+driver=Driver
+missingprotocol=The Protocol field should have a value (i.e. 'mysql')
+missingdriver=The Driver field should have a value (i.e. 'com.mysql.jdbc.Driver')
 
 #################################
 # Prefs
