--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -38,6 +38,8 @@ noimage=No Image
 #################################
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 NO_RECORD_SETS=There are no matching RecordSets.
+NO_DBDRIVERS_TITLE=No Database Driver
+NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
 
 #################################
 # Generic Terms
