--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -106,6 +106,7 @@ username=Username
 password=Password
 autologin=Automatically Login
 rememberuser=Remember Username
+rememberpassword=Remember Password
 databases=Databases
 servers=Servers
 login=Login
