Rewrote the our own preferences to use a properties file instead of the Java prefs system. Also, added the remember pasword checkbox to the LoginPanel Change the <rule to have id instead of name for enablerules

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -106,6 +106,7 @@ username=Username
 password=Password
 autologin=Automatically Login
 rememberuser=Remember Username
+rememberpassword=Remember Password
 databases=Databases
 servers=Servers
 login=Login
