--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -40,6 +40,8 @@ ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 NO_RECORD_SETS=There are no matching RecordSets.
 NO_DBDRIVERS_TITLE=No Database Driver
 NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
+LoginUserMismatch=There is no Specify User Record for your database login ID.\n The application will exit.
+LoginUserMismatchTitle=Missing Specify User
 
 #################################
 # Generic Terms
@@ -115,6 +117,9 @@ protocol=Protocol
 driver=Driver
 missingprotocol=The Protocol field should have a value (i.e. 'mysql')
 missingdriver=The Driver field should have a value (i.e. 'com.mysql.jdbc.Driver')
+
+IsAccessionDBTitle=Is Accession Database
+IsAccessionDB=Is this database for Accesins Only?
 
 #################################
 # Prefs
