Temporary AppConext and ViewMSetMgr fixes until the "real" impl happens

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -19,6 +19,8 @@ stats_hint=Display statistics for the collection
 Saved_Searches=Saved Searches
 SystemSetup=Sys Setup
 LocalityMapper=Locality Mapper
+CollectionObject=Collection Object
+AdministrationTasks=Administration Tasks
 
 Record_Set=Record Sets
 
@@ -99,7 +101,8 @@ ExitMneu=x
 #################################
 AgentTitle=%s Agent
 PermitTitle=%s Permit
-LoggingIn=Logging into %s
+LoggingIn=Logging into %s ...
+LoadingSchema=Loading Database Schema...
 NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
 # Login Dialog
