Modified BaseTask.createToolbarButton() to allow for passing in an ActionListener as well as to require pre-localization of all displayed strings. Modifed all Taskables that called createToolbarButton() to be in sync with new API. A few changes in Taxon-related HBMs (all related to laziness). Removed a couple of unneeded fields from TreeTableViewer. Lots of new strings in the resources_en file.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -6,6 +6,8 @@ Workbench=Workbench
 workbench_hint=Create and edit Pre-Catalog Workbenches
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
+Taxon_Tree=Taxonomy Tree
+taxontree_hint=View/edit the taxonomy tree
 Labels=Labels
 labels_hint=Create and Print Labels
 Reports=Reports
@@ -95,6 +97,12 @@ CutMneu=t
 ExitMenu=Exit
 ExitAccl=Q
 ExitMneu=x
+
+TaxonMenuItem=Taxon Tree Menu Item
+TaxonMnemonic=R
+TaxonAccesDesc=Taxon Tree Accessible Description
+TaxonAccl=R
+TaxonNavBoxLabel=NavBox Label String
 
 #################################
 # Dialogs
@@ -338,3 +346,13 @@ AgentSearchTitle=Search For an Agent
 CreateLocalityMapTT=Create a Map from the Locality
 LocalityMapperTitle=Collecting Events from %s to %s
 
+#################################
+# Tree Table Viewer
+#################################
+FindNode=Find-A-Node
+find=Find
+find_next=Next
+top=Top View Only
+bottom=Bottom View Only
+both=Both Views
+wrap=Wrap Search
