Added a lot of icons to icons.xml and the images directory. Added TaxonTreeTask to the plugin registry (plugin_registry.xml). Minor adjustments in SubPaneMgr (to naming of panes when there are duplicate names). Removed TTV startup ability from DataEntryTask. Initial import of TaxonTreeTask. Lots of adjustments to TTV-related stuff to work with the new TaxonTreeTask. Initial import of TreeNodeFindWidget. Lots of new entries in the resources_en.properties file.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -349,6 +349,7 @@ LocalityMapperTitle=Collecting Events from %s to %s
 #################################
 # Tree Table Viewer
 #################################
+ToggleViewMode=Toggle View Mode
 FindNode=Find-A-Node
 find=Find
 find_next=Next
