--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -349,6 +349,7 @@ LocalityMapperTitle=Collecting Events from %s to %s
 #################################
 # Tree Table Viewer
 #################################
+ToggleViewMode=Toggle View Mode
 FindNode=Find-A-Node
 find=Find
 find_next=Next
