--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -350,6 +350,7 @@ LocalityMapperTitle=Collecting Events from %s to %s
 # Tree Table Viewer
 #################################
 ToggleViewMode=Toggle View Mode
+SaveTree=Save Tree
 FindNode=Find-A-Node
 find=Find
 find_next=Next
