--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -65,6 +65,12 @@ Restore=Restore
 DeletedItems=Deleted Items
 
 #################################
+# Debug Terms
+#################################
+DebugMenu=Debug
+DebugMneu=D
+
+#################################
 # Generic Icons
 #################################
 Bar_Chart=Bar Chart
