Additional fixes to AppContextMgr to better support the notion of default form sets. Fixes Bug 3539 Also, updated the JStatusBar so it can handle multi "sections" for displaying additional information.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -140,6 +140,8 @@ IsAccessionDB=Is this database for Accessions Only?
 
 InitializingApp=Initialing Specify...
 
+ChooseCatSeriesColObjDef=Choose Default Set of Forms
+
 #################################
 # Prefs
 #################################
