--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -140,6 +140,8 @@ IsAccessionDB=Is this database for Accessions Only?
 
 InitializingApp=Initialing Specify...
 
+ChooseCatSeriesColObjDef=Choose Default Set of Forms
+
 #################################
 # Prefs
 #################################
