Fixed up a lot of strings in the resources_en file. Localized some strings used in the TTV. Changed the icons used in the TaxonTreeTask.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -1,4 +1,58 @@
 #################################
+# Really common GUI terms
+#################################
+File=File
+file=file
+About=About
+about=about
+Edit=Edit
+edit=edit
+Save=Save
+save=save
+Cancel=Cancel
+cancel=cancel
+Discard=Discard
+discard=discard
+Exit=Exit
+exit=exit
+Find=Find
+find=Find
+Search=Search
+search=search
+FindNext=Find Next
+findNext=find next
+Browse=Browse...
+browse=browse...
+Next=Next
+next=next
+Back=Back
+back=back
+Wrap=Wrap
+wrap=wrap
+WrapSearch=Wrap Search
+wrapSearch=wrap search
+OK=OK
+ok=ok
+Close=Close
+close=close
+Help=Help
+help=help
+SelectAll=Select All
+selectAll=select all
+DeselectAll=Deselect All
+deselectAll=deselect all
+Error=Error
+error=error
+Delete=Delete
+delete=delete
+Open=Open
+open=open
+Email=Email
+email=email
+Login=Login
+login=login
+
+#################################
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
@@ -14,7 +68,6 @@ Reports=Reports
 reports_hint=Create and Print Reports
 Interactions=Interactions
 interactions_hint=Create, Edit Loans, Gifts, and Exchanges
-Search=Search
 search_hint=Search for any data in the collection
 Statistics=Statistics
 stats_hint=Display statistics for the collection
@@ -26,11 +79,6 @@ AdministrationTasks=Administration Tasks
 
 Record_Set=Record Sets
 
-SelectAll=Select All
-DeselectAll=Deselect All
-Cancel=Cancel
-OK=OK
-Close=Close
 Advanced=Advanced
 NoneAvail=None Available
 
@@ -51,16 +99,12 @@ LoginUserMismatchTitle=Missing Specify User
 # Generic Terms
 #################################
 Execute=Execute
-Error=Error
 Rename=Rename
-Delete=Delete
 EmptyTrash=Empty Trash
-error=Error
 RetrievingData=Retrieving Data
 LoadingImage=Loading Image...
 
 # Trash Iiems
-Open=Open
 Restore=Restore
 DeletedItems=Deleted Items
 
@@ -128,7 +172,6 @@ rememberuser=Remember Username
 rememberpassword=Remember Password
 databases=Databases
 servers=Servers
-login=Login
 extratitle=Extra Details
 protocol=Protocol
 driver=Driver
@@ -148,7 +191,7 @@ ChooseCatSeriesColObjDef=Choose Default Set of Forms
 preferences=Preferences
 showall=Show All
 ui=User Interface
-email=EMail
+
 formatting=Formatting
 settings=Settings
 
@@ -160,7 +203,6 @@ accounttype=Account Type
 servername=Server Name
 smtp=SMTP
 accountname=Account Name
-browse=Browse...
 testconnection=Test Connection
 localmailbox=Local Mail Box
 userinfo=User Information
@@ -213,7 +255,6 @@ RecordSet_Name=RecordSet Name
 SaveToRecordSet=Save To RecordSet
 AddAllSelected=Add Selected
 AddAll=Add All
-Save=Save
 
 #################################
 # Express Search
@@ -322,7 +363,6 @@ newpicklist=New Pick List
 #################################
 # Workbench
 #################################
-File=File
 Templates=Templates
 Workbenches=Workbenches
 New_Workbench=New Workbench
@@ -335,11 +375,7 @@ Smith_Collection=Smith Collection
 #################################
 # Wizards
 #################################
-back=Back
-next=Next
 finish=Finish
-cancel=Canel
-help=Help
 
 EnterDataType=Enter the Type of Collection
 EnterCollectionName=Enter Collection Name
@@ -362,9 +398,6 @@ LocalityMapperTitle=Collecting Events from %s to %s
 ToggleViewMode=Toggle View Mode
 SaveTree=Save Tree
 FindNode=Find-A-Node
-find=Find
-find_next=Next
 top=Top View Only
 bottom=Bottom View Only
 both=Both Views
-wrap=Wrap Search
