Fixes for form based frames and dialogs, now supports dialogs (ViewBasedDisplay) Add notifications for a new login or context change that enables tasks to clean up or readjust things.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -52,6 +52,9 @@ email=email
 Login=Login
 login=login
 
+Accept=Accept
+
+
 #################################
 # Toolbar /  Tasks
 #################################
@@ -161,7 +164,6 @@ AgentTitle=%s Agent
 PermitTitle=%s Permit
 LoggingIn=Logging into %s ...
 LoadingSchema=Loading Database Schema...
-NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
 # Login Dialog
 logintitle=Specify Login
@@ -184,6 +186,10 @@ IsAccessionDB=Is this database for Accessions Only?
 InitializingApp=Initialing Specify...
 
 ChooseCatSeriesColObjDef=Choose Default Set of Forms
+
+# Save Dialog
+SaveRecord=Do you want to save the changes?
+SaveRecordTitle=Save Changes
 
 #################################
 # Prefs
@@ -285,6 +291,7 @@ ESCloseTable=Close
 ExpandTBL=Expand
 CollapseTBL=Collapse
 NoExpressSearchResults=No Search Results
+TermsIndexedInTime=%d terms indexed in %5.1f seconds
 
 #################################
 # Search
