--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -151,11 +151,21 @@ ExitMenu=Exit
 ExitAccl=Q
 ExitMneu=x
 
-TaxonMenuItem=Taxon Tree Menu Item
+TaxonTree=Taxon Tree
+TaxonMenu=Taxon Tree
 TaxonMnemonic=R
-TaxonAccesDesc=Taxon Tree Accessible Description
-TaxonAccl=R
-TaxonNavBoxLabel=NavBox Label String
+
+LocationTree=Location Tree
+LocationMenu=Location Tree
+LocationMnemonic=L
+
+GeoTimePeriodTree=Geo Time Period Tree
+GeoTimePeriodMenu=Geo Time Period Tree
+GeoTimePeriodMnemonic=G
+
+GeographyTree=Geography Tree
+GeographyMenu=Geography Tree
+GeographyMnemonic=Y
 
 #################################
 # Dialogs
@@ -164,6 +174,7 @@ AgentTitle=%s Agent
 PermitTitle=%s Permit
 LoggingIn=Logging into %s ...
 LoadingSchema=Loading Database Schema...
+NoViewsForUserDatabase=You do not have access to any forms for database '%s'
 
 # Login Dialog
 logintitle=Specify Login
@@ -405,6 +416,8 @@ LocalityMapperTitle=Collecting Events from %s to %s
 ToggleViewMode=Toggle View Mode
 SaveTree=Save Tree
 FindNode=Find-A-Node
-top=Top View Only
-bottom=Bottom View Only
-both=Both Views
+Top=Top View Only
+Bottom=Bottom View Only
+Both=Both Views
+TreeDefEditor=Tree Definition Editor
+TreeDefEditDialogTitle=Tree Definition Data Entry Form
