--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -282,6 +282,7 @@ IndexerPane=Express Search Config
 Express_Search=Express Search
 Indexing_Descr=Indexing Collection Information
 doneIndexing=Indexing has completed.
+OptimizingIndex=Optimizing the Index...
 indexingWasCancelled=Indexing was cancelled and removed.
 CancelIndexing=Cancel Indexing
 ShowTopEntries=Show Top %s
@@ -302,7 +303,7 @@ ESCloseTable=Close
 ExpandTBL=Expand
 CollapseTBL=Collapse
 NoExpressSearchResults=No Search Results
-TermsIndexedInTime=%d terms indexed in %5.1f seconds
+TermsIndexedInTime=%d terms indexed in %d minutes %02d seconds
 
 #################################
 # Search
